Field Hunt/src/objects/Adjustment__c.object
<CustomObject>
    <description>Adjustments are used to track when Opportunities that are already in our accounting software have a change in Amount. They are made by Process Builder and should never be created manually.</description>
    <fields>
        <fullName>Adjustment_Amount__c</fullName>
        <description>This is the amount of the adjustment.</description>
        <inlineHelpText>This is the amount of the adjustment.</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Great_Plains_Export_Date__c</fullName>
        <description>This is the date the adjustment was exported to Great Plains.</description>
        <inlineHelpText>This is the date the adjustment was exported to Great Plains.</inlineHelpText>
        <label>Great Plains Export Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Deferred_Revenue__c</fullName>
        <description>When the Adjustment is created, if the Campaign Fiscal Year is the next year, this formula field will flag it as Deferred Revenue. The adjustment will be made to the correct Deferred Revenue account in Great Plains.</description>
        <formula>IF( YEAR( DATEVALUE(CreatedDate) ) &lt; VALUE( Opportunity__r.Campaign.Campaign_Fiscal_Year__c ), TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When the Adjustment is created, if the Campaign Fiscal Year is the next year, this formula field will flag it as Deferred Revenue. The adjustment will be made to the correct Deferred Revenue account in Great Plains.</inlineHelpText>
        <label>Is Deferred Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sent_to_Great_Plains__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows whether or not this Adjustment has been exported to Great Plains.</description>
        <inlineHelpText>This field shows whether or not this Adjustment has been exported to Great Plains.</inlineHelpText>
        <label>Sent to Great Plains</label>
        <type>Checkbox</type>
    </fields>
    <label>Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Prep_for_Great_Plains</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Adjustment_Amount__c</columns>
        <columns>Sent_to_Great_Plains__c</columns>
        <columns>Great_Plains_Export_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sent_to_Great_Plains__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Prep for Great Plains</label>
        <sharedTo>
            <group>Admin_Staff</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ADJ-{000000}</displayFormat>
        <label>Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>